--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
  align-content: center;
  padding-left: 30%;
 padding-right: 30%;
+margin-top:5%;
 /*padding-bottom: 10%;*/
   width:100%;
 
@@ -35,6 +36,7 @@ padding-right: 30%;
   font-family: 'Sacramento', cursive;
   font-weight: bold;
   text-align: center;
+  margin-top: 7%;
   /*padding-bottom: 10%;*/
 }
 
@@ -88,10 +90,12 @@ padding-right: 11%;
 }
 
 .kpsdescription {
+  background-color: white;
+  border: 1px solid #040303;
   text-align: center;
   letter-spacing: 2px;
   line-height: 2;
- padding-top: 4%;
+  padding-top: 4%;
 }
 
 .linkkps {
@@ -146,7 +150,9 @@ color: #000000;
 
 }
 
-
+hr{
+  border: 2px solid #be2132;
+}
 .ondeestamos{
   color: #000000;
   font-family: 'Sacramento', cursive;
@@ -157,13 +163,14 @@ text-align: center;
 
 }
 .imageclube{
-width: 40%;
+max-width:50%;
+max-height: 70%;
 float: left;
 
 }
 .map{
-width: 35%;
-height: 90%;
+  max-width:50%;
+  max-height: 100%;
 float: left;
 
 }
@@ -186,7 +193,12 @@ text-align: center;
 }
 /*para tornar a pagina responsive*/
 @media screen (max-width: 768px) {
+.container{
+  display: grid;
+  grid-template-columns: auto;
+  column-gap: 3%;
+}
 
-  
+
 
 }
