--- a/css/styles.css
+++ b/css/styles.css
@@ -41,11 +41,16 @@ margin-top:5%;
 }
 
 .SenseiJoana {
-float: right;
+float: center;
+
+}
+
+.fenix{
+  height: auto;
 }
 
 .SenseiJoao {
-  float: left;
+float: center;
 
 }
 
@@ -75,8 +80,8 @@ float: right;
 
 .kpsimage {
 width:  100%;
-padding-left: 14%;
-padding-right: 11%;
+padding-left: 5%;
+padding-right: 3%;
 }
 
 .titleassociacao {
@@ -96,6 +101,8 @@ padding-right: 11%;
   letter-spacing: 2px;
   line-height: 2;
   padding-top: 4%;
+  padding-left: 4%;
+  padding-right: 6%;
 }
 
 .linkkps {
@@ -192,13 +199,25 @@ text-align: center;
 
 }
 /*para tornar a pagina responsive*/
-@media screen (max-width: 768px) {
+@media screen and (max-width: 766px) {
 .container{
   display: grid;
   grid-template-columns: auto;
   column-gap: 3%;
+  }
+  .Benjamins{
+    text-align: center;
+  }
+
+.Infantil{
+  text-align: center;
 }
+.Adultos{
+  text-align: center;
+}
+.map{
 
-
+height: 65%;
+}
 
 }
